--- a/lms/src/main/resources/templates/fragments/associationSider.html
+++ b/lms/src/main/resources/templates/fragments/associationSider.html
@@ -41,6 +41,31 @@ $(document).ready(function() {
 		<a class="text-white" href="/association/refundPolicy/addRefundPolicyLectureList">강의 환불정책 추가</a>
 		<a class="text-white" href="/association/refundPolicy/addRefundPolicyLicense">자격 환불정책 추가</a>
 	</div>
+	<button class="navdropdown-btn"><span class="text-white">교육원 평가</span>
+		<i style="color:white" class="fas fa-caret-down"></i>
+	</button>	
+	<div class="navdropdown-container">
+		<button class="navdropdown-btn"><span class="text-white">평가조회</span>
+			<i style="color:white" class="fas fa-caret-down"></i>
+		</button>	
+		<div class="navdropdown-container">
+			<a class="text-white" href="/association/evaluation/evaluationTotal">교육원평가관리</a>
+			<a class="text-white" href="/association/evaluation/evaluationTotalChart">평가 합계 차트</a>
+			<a class="text-white" href="#">#강사평가</a>
+			<a class="text-white" href="#">#강의평가-수강생</a>
+			<a class="text-white" href="#">#교육원평가-수강생</a>
+			<a class="text-white" href="#">#우수교육원관리</a>
+		</div>
+		<button class="navdropdown-btn"><span class="text-white">평가항목</span>
+			<i style="color:white" class="fas fa-caret-down"></i>
+		</button>	
+		<div class="navdropdown-container">
+			<a class="text-white" href="#">#교육원평가항목관리</a>
+			<a class="text-white" href="#">#교육원-강사평가항목관리</a>
+			<a class="text-white" href="#">#수강생-교육원평가항목관리</a>
+			<a class="text-white" href="#">#수강생-강의평가항목관리</a>
+		</div>
+	</div>
 </div>
 </header>
 </html>
