--- a/lms/src/main/resources/templates/institution/annualFee/annualFee.html
+++ b/lms/src/main/resources/templates/institution/annualFee/annualFee.html
@@ -29,7 +29,7 @@
             </tr>
         </tbody>
     </table>
-    <a type="button" href="/institution/annualFee/paymentAnnualFee" class="btn btn-primary">연회비 결제 하기</a>
+    <a type="button" href="/institution/annualFee/paymentAnnualFee" class="btn btn-secondary">연회비 결제 하기</a>
     <br>
     <br>
     <h3 th:text="${session.institutionName}+' 연회비 결제 내역'"></h3>
