--- a/lms/src/main/resources/templates/institution/annualFee/paymentAnnualFee.html
+++ b/lms/src/main/resources/templates/institution/annualFee/paymentAnnualFee.html
@@ -50,7 +50,7 @@
 		<input type="hidden" id="institutionCode" name="institutionCode" th:value="${session.institutionCode}">
 		<input type="hidden" id="infoAnnualFeeCode" name="infoAnnualFeeCode" th:value="${infoAnnualFee.infoAnnualFeeCode}">
 		<input type="hidden" id="paymentAnnualFeePrice" name="paymentAnnualFeePrice" th:value="${infoAnnualFee.infoAnnualFeeCode}">
-		<button type="button" id="btnPay" class="btn btn-primary">결제하기</button>
+		<button type="button" id="btnPay" class="btn btn-secondary">결제하기</button>
 	</form>
 	<h4></h4>
 </div>
