--- a/lms/src/main/resources/templates/institution/institutionIndex.html
+++ b/lms/src/main/resources/templates/institution/institutionIndex.html
@@ -23,5 +23,9 @@
 		<li><a href="/sendTeacher">강사 승인코드 전송</a></li>
 		<li><a href="/sendAdmin">직원 승인코드 전송</a></li>
 	</ul>
+	<h2>교육원 : 강사 평가하기</h2>
+	<ul>
+		<li><a href="/institution/evaluation/evaluationTeacherList">강사 평가 리스트</a></li>
+	</ul>
 </div>
 </html>
