--- a/lms/src/main/resources/templates/rootIndex.html
+++ b/lms/src/main/resources/templates/rootIndex.html
@@ -23,16 +23,16 @@
 		<br>
 		<h4>협회 바로가기</h4>
 		<div class="btn-group btn-group-lg">
-			<a type="button" href="/PAIndex?institutionCode=I20120101000000" class="btn btn-primary">평생교육지원협회</a>
+			<a href="/PAIndex?institutionCode=I20120101000000" class="btn btn-outline-primary">평생교육지원협회</a>
 		</div>
 		<br>
 		<br>
 		<h4>교육원 바로가기</h4>
 		<p>수강생들이 사용하는 페이지</p>
 		<div class="btn-group btn-group-lg">
-			<a type="button" href="/PIIndex?institutionCode=I20140101000000" class="btn btn-primary">전주평생교육원</a>
-			<a type="button" href="/PIIndex?institutionCode=I20140102000000" class="btn btn-primary">서울평생교육원</a>
-			<a type="button" href="/PIIndex?institutionCode=I20150103000000" class="btn btn-primary">성남평생교육원</a>
+			<a href="/PIIndex?institutionCode=I20140101000000" class="btn btn-outline-primary">전주평생교육원</a>
+			<a href="/PIIndex?institutionCode=I20140102000000" class="btn btn-outline-primary">서울평생교육원</a>
+			<a href="/PIIndex?institutionCode=I20150103000000" class="btn btn-outline-primary">성남평생교육원</a>
 		</div>
 		<br>
 		<br>
@@ -40,9 +40,9 @@
 		<h4>권한별 바로가기</h4>
 		<p>각 권한별로 사용하는 페이지</p>
 		<div class="btn-group btn-group-lg">
-			<a type="button" href="/teacherLogin" class="btn btn-primary">강사</a>
-			<a type="button" href="/institutionLogin" class="btn btn-primary">교육원직원</a>
-			<a type="button" href="/associationLogin" class="btn btn-primary">협회직원</a>
+			<a href="/teacherLogin" class="btn btn-outline-primary">강사</a>
+			<a href="/institutionLogin" class="btn btn-outline-primary">교육원직원</a>
+			<a href="/associationLogin" class="btn btn-outline-primary">협회직원</a>
 		</div>
 		<p style="height: 200px"></p>
 	</div>
