--- a/lms/src/main/resources/templates/association/evaluation/modifyEvalTotal.html
+++ b/lms/src/main/resources/templates/association/evaluation/modifyEvalTotal.html
@@ -9,9 +9,122 @@
 
 <!-- html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
+<script type="text/javascript">
+    $(document).ready(function() {
+        //월별 평가 항목 상세 보기 이벤트 처리
+        $('.btn').on('click',function() {
+            console.log($(this).val());
+        });
+        //월별 평가 항목 상세 보기 이벤트 처리
+        $('#btnModify').on('click',function() {
+            $('#modifyEvalTotal').submit();
+        });
+    })
+</script>
 </th:block>
 
 <div layout:fragment="content">
-    <h3>교육원 평가</h3>
+    <h3>교육원 평가 수정</h3>
+    <form id="modifyEvalTotal" action="/associationModifyEvalTotal" method="post">
+        <input type="hidden" id="evalTotalCode" name="evalTotalCode" th:value="${evalTotal.evalTotalCode}">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th></th>			
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>교육원 명</td>
+                    <td><input type="text" class="form-control" th:value="${evalTotal.institutionName}" id="institutionName" name="institutionName" readonly="readonly"></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>평가 항목</td>
+                    <td><input type="text" class="form-control" th:value="${evalTotal.evalTotalType}" id="evalTotalType" name="evalTotalType" readonly="readonly"></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>평가 년도</td>
+                    <td><input type="text" class="form-control" th:value="${evalTotal.evalTotalYear}" id="evalTotalYear" name="evalTotalYear" readonly="readonly"></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>1월</td>
+                    <td><input type="number" class="form-control" th:value="${evalTotal.evalTotalJan}" id="evalTotalJan" name="evalTotalJan"></td>
+                    <td><button type="button" class="btn btn-secondary" value="01">평가 상세 보기</button></td>
+                </tr>
+                <tr>
+                    <td>2월</td>
+                    <td><input type="number" class="form-control" th:value="${evalTotal.evalTotalFeb}" id="evalTotalFeb" name="evalTotalFeb"></td>
+                    <td><button type="button" class="btn btn-secondary" value="02">평가 상세 보기</button></td>
+                </tr>
+                <tr>
+                    <td>3월</td>
+                    <td><input type="number" class="form-control" th:value="${evalTotal.evalTotalMar}" id="evalTotalMar" name="evalTotalMar"></td>
+                    <td><button type="button" class="btn btn-secondary" value="03">평가 상세 보기</button></td>
+                </tr>
+                <tr>
+                    <td>4월</td>
+                    <td><input type="number" class="form-control" th:value="${evalTotal.evalTotalApr}" id="evalTotalApr" name="evalTotalApr"></td>
+                    <td><button type="button" class="btn btn-secondary" value="04">평가 상세 보기</button></td></tr>
+                <tr>
+                    <td>5월</td>
+                    <td><input type="number" class="form-control" th:value="${evalTotal.evalTotalMay}" id="evalTotalMay" name="evalTotalMay"></td>
+                    <td><button type="button" class="btn btn-secondary" value="05">평가 상세 보기</button></td>
+                </tr>
+                <tr>
+                    <td>6월</td>
+                    <td><input type="number" class="form-control" th:value="${evalTotal.evalTotalJun}" id="evalTotalJun" name="evalTotalJun"></td>
+                    <td><button type="button" class="btn btn-secondary" value="06">평가 상세 보기</button></td>
+                </tr>
+                <tr>
+                    <td>7월</td>
+                    <td><input type="number" class="form-control" th:value="${evalTotal.evalTotalJul}" id="evalTotalJul" name="evalTotalJul"></td>    
+                    <td><button type="button" class="btn btn-secondary" value="07">평가 상세 보기</button></td>
+                </tr>
+                <tr>
+                    <td>8월</td>
+                    <td><input type="number" class="form-control" th:value="${evalTotal.evalTotalAug}" id="evalTotalAug" name="evalTotalAug"></td>
+                    <td><button type="button" class="btn btn-secondary" value="08">평가 상세 보기</button></td>
+                </tr>
+                <tr>
+                    <td>9월</td>
+                    <td><input type="number" class="form-control" th:value="${evalTotal.evalTotalSep}" id="evalTotalSep" name="evalTotalSep"></td>
+                    <td><button type="button" class="btn btn-secondary" value="09">평가 상세 보기</button></td>
+                </tr>
+                <tr>
+                    <td>10월</td>
+                    <td><input type="number" class="form-control" th:value="${evalTotal.evalTotalOct}" id="evalTotalOct" name="evalTotalOct"></td>
+                    <td><button type="button" class="btn btn-secondary" value="10">평가 상세 보기</button></td>
+                </tr>
+                <tr>
+                    <td>11월</td>
+                    <td><input type="number" class="form-control" th:value="${evalTotal.evalTotalNov}" id="evalTotalNov" name="evalTotalNov"></td>
+                    <td><button type="button" class="btn btn-secondary" value="11">평가 상세 보기</button></td>
+                </tr>
+                <tr>
+                    <td>12월</td>
+                    <td><input type="number" class="form-control" th:value="${evalTotal.evalTotalDec}" id="evalTotalDec" name="evalTotalDec"></td>
+                    <td><button type="button" class="btn btn-secondary" value="12">평가 상세 보기</button></td>
+                </tr>
+                <tr>
+                    <td>총합계</td>
+                    <td><input type="text" class="form-control" th:value="${evalTotal.evalTotalSumScore}" id="evalTotalSumScore" name="evalTotalSumScore" readonly="readonly"></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td><button type="button" class="form-control" id="btnModify">수정</button></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </tbody>
+        </table>
+    </form>
+    <div id="evalTotal">
+
+    </div>
 </div>
 </html>
