--- a/lms/src/main/resources/templates/institution/institutionLogin.html
+++ b/lms/src/main/resources/templates/institution/institutionLogin.html
@@ -18,34 +18,31 @@
 </th:block>
 
 <div layout:fragment="content">
-	<div>
-		<p style="height: 100px"></p>
-		<h3 th:text="${session.availability}"></h3>
-		<form action="/institutionLogin" method="post">
-			<fieldset>
-				<div class="form-group">
-    				<legend>교육원 로그인</legend>
-    			</div>
-				<div class="form-group row">
-    	  			<div class="col-sm-4"></div>
-					<label class="col-sm-2 col-form-label">ID</label>
-      				<div class="col-sm-2">
-        				<input type="text" class="form-control" name="memberOnlineId" value="id004">
-        			</div>
-    	    		<div class="col-sm-6"></div>
-	      		</div>
-      			<div class="form-group row">
-      				<div class="col-sm-4"></div>
-					<label class="col-sm-2 col-form-label">Password</label>
-      				<div class="col-sm-2">
-        				<input type="password" class="form-control" name="memberOnlinePw" value="pw004">
-    	    		</div>
-	        		<div class="col-sm-6"></div>
-      			</div>
-				<button type="submit" class="btn btn-info">로그인</button><button type="button" onclick="location.href='/insertInstAdmin'" class="btn btn-outline-info">교육원직원등록</button>
-			</fieldset>
-		</form>
-		<p style="height: 300px"></p>
-	</div>
+	<p style="height: 100px"></p>
+	<h3>교육원 로그인</h3>
+	<form action="/institutionLogin" method="post">
+			<div class="form-group row">
+				<div class="col-sm-4"></div>
+				<label class="col-sm-2 col-form-label">ID</label>
+				<div class="col-sm-2">
+					<input type="text" class="form-control" name="memberOnlineId" value="id004">
+				</div>
+				<div class="col-sm-6"></div>
+			</div>
+			<div class="form-group row">
+				<div class="col-sm-4"></div>
+				<label class="col-sm-2 col-form-label">Password</label>
+				<div class="col-sm-2">
+					<input type="password" class="form-control" name="memberOnlinePw" value="pw004">
+				</div>
+				<div class="col-sm-6"></div>
+			</div>
+			<button type="submit" class="btn btn-info">로그인</button>
+			<a href="/insertAssociationAdmin" class="btn btn-outline-info">교육원직원등록</a>
+	</form>
+	<br>
+	<br>
+	<a href="/" class="btn btn-outline-primary">메인 페이지로</a>
+	<p style="height: 300px"></p>
 </div>
 </html>
