[나현주] 평가항목관리-교육원평가항목관리 리스트 출력 및 항목 추가 완료 교육원-강사평가,수강생-강의/강사평가,수강생-교육원평가 화면 연결

--- a/lms/src/main/resources/templates/association/evaluation/itemManagementMap.html
+++ b/lms/src/main/resources/templates/association/evaluation/itemManagementMap.html
@@ -13,14 +13,16 @@
 </th:block>
 
 <div layout:fragment="content">
+<!-- <button type="button" id="btnBack" class="btn btn-secondary disabled">뒤로가기</button> -->
+<a href="javascript:history.back()">◁뒤로가기</a>
 <h2>평가항목관리</h2>
 	<p style="height: 30px"></p>
 	<div class="col-sm-2 list-group"></div>
 	<div class="col-sm-3 list-group">
-		<a href="#" class="list-group-item list-group-item-action">#교육원평가항목관리</a>
-		<a href="#" class="list-group-item list-group-item-action">#교육원-강사평가항목관리</a>
-		<a href="#" class="list-group-item list-group-item-action">#수강생-교육원평가항목관리</a>
-		<a href="#" class="list-group-item list-group-item-action">#수강생-강의평가항목관리</a>
+		<a href="/evalByAssociation" class="list-group-item list-group-item-action">교육원평가항목관리</a>
+		<a href="/evalByInstitution" class="list-group-item list-group-item-action">교육원-강사평가항목관리</a>
+		<a href="/institutionByStudent" class="list-group-item list-group-item-action">수강생-교육원평가항목관리</a>
+		<a href="/lectureByStudent" class="list-group-item list-group-item-action">수강생-강의평가항목관리</a>
 	</div>
 	<div class="col-sm-7 list-group"></div>
 	<p style="height: 30px"></p>
