--- a/lms/src/main/resources/templates/association/license/LicenseTestLocationList.html
+++ b/lms/src/main/resources/templates/association/license/LicenseTestLocationList.html
@@ -30,11 +30,11 @@
 		</tr>
 		<tr th:each="subject:${list}">
 			<td th:text="${subject.licenseTestLocationCode}"></td>
-			<td><a th:text="${subject.licenseTestLocationRegion}" th:href="@{'/association/license/licenseTestLocationDetail?licenseTestLocationRegion='+${subject.licenseTestLocationRegion}}"></a></td>
+			<td><a th:text="${subject.licenseTestLocationRegion}" th:href="@{'/association/license/licenseTestLocationDetail?licenseTestLocationCode='+${subject.licenseTestLocationCode}}" th:value="${subject.licenseTestLocationCode}"></a></td>
 			<td th:text="${subject.licenseTestLocationAddress}"></td>
 			<td th:text="${subject.licenseTestLocationUse}"></td>
 			<td th:text="${subject.licenseTestLocationMaximumNumber}"></td>
-			<td th:text="${subject.licenseTestLocationDate}"></td>			
+			<td th:text="${subject.licenseTestLocationDate}"></td>				
 		</tr>
 	</table>
 </div>
