[나현주] 교육원-강사평가 list출력 / insert 처리

--- a/lms/src/main/resources/templates/association/infoEvaluation/addInfoEvalByAssociation.html
+++ b/lms/src/main/resources/templates/association/infoEvaluation/addInfoEvalByAssociation.html
@@ -43,7 +43,7 @@ $(document).ready(function(){
     			
     			<div class="col-sm-5">
 					<label for="InputInfoEvalByAssociationSort">평가종류</label>
-					<input type="text" class="form-control" id="infoEvalByAssociationSort" name="infoEvalByAssociationSort" aria-describedby="" readonly="readonly" value="협회평가">
+					<input type="text" class="form-control" id="infoEvalByAssociationSort" name="infoEvalByAssociationSort" aria-describedby="" readonly="readonly" value="교육원종합평가">
     	  			<small class="form-text text-muted"></small>
       			</div>
 			</div>
