--- a/lms/src/main/resources/templates/association/infoEvaluation/addInfoEvalByInstitution.html
+++ b/lms/src/main/resources/templates/association/infoEvaluation/addInfoEvalByInstitution.html
@@ -43,7 +43,7 @@ $(document).ready(function(){
     			
     			<div class="col-sm-5">
 					<label for="InputInfoEvalByInstitutionSort">평가종류</label>
-					<input type="text" class="form-control" id="infoEvalByInstitutionSort" name="infoEvalByInstitutionSort" aria-describedby="" readonly="readonly" value="협회평가">
+					<input type="text" class="form-control" id="infoEvalByInstitutionSort" name="infoEvalByInstitutionSort" aria-describedby="" readonly="readonly" value="강사평가(교육원)">
     	  			<small class="form-text text-muted"></small>
       			</div>
 			</div>
