--- a/lms/src/main/resources/templates/association/infoEvaluation/addInfoEvalLectureByStudent.html
+++ b/lms/src/main/resources/templates/association/infoEvaluation/addInfoEvalLectureByStudent.html
@@ -1,10 +1,77 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org" 
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/associationLayout">
+<meta charset="utf-8">
+<!-- html 고유 CSS 추가 -->
+<th:block layout:fragment="css">
+<style>
+	table {
+		text-align: center;
+	}
+	.btn-lg {
+		font-size: 12px;
+		float: right;
+	}
+</style>
+</th:block>
 
-</body>
+<!-- html 고유 스크립트 추가 -->
+<th:block layout:fragment="script">
+<script>
+$(document).ready(function(){
+	$('#btnAdd').on('click',function(){
+		console.log('#btnAdd click test');
+		$('#infoEvalLectureByStudentInsert').submit();
+	});
+	$('#btnBack').on('click',function(){
+		console.log('#btnBack click test');
+		location.href='javascript:history.back()';
+	});
+});
+
+</script>
+</th:block>
+
+<div layout:fragment="content">
+	<form action="/infoEvalLectureByStudentInsert" id="infoEvalLectureByStudentInsert" method="post">
+		<fieldset>
+    		<div class="form-group">
+    			<legend>평가항목추가</legend>
+    		</div>
+    		<div class="form-group">
+    			
+    			<div class="col-sm-5">
+					<label for="InputInfoEvalLectureByStudentSort">평가종류</label>
+					<input type="text" class="form-control" id="InfoEvalLectureByStudentSort" name="InfoEvalLectureByStudentSort" aria-describedby="" readonly="readonly" value="교육원평가">
+    	  			<small class="form-text text-muted"></small>
+      			</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-5">
+					<label for="InputInfoEvalLectureByStudentType">평가항목분류</label>
+					<input type="text" class="form-control" id="InfoEvalLectureByStudentType" name="InfoEvalLectureByStudentType" aria-describedby="" placeholder="" value="">
+      				<small class="form-text text-muted">ex)시설/친절도/</small>
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-5">
+					<label for="InputInfoEvalLectureByStudentContents">평가내용</label>
+					<input type="text" class="form-control" id="InfoEvalLectureByStudentContents" name="InfoEvalLectureByStudentContents" aria-describedby="" placeholder="평가 할 질문을 입력하세요" value="">
+				</div>
+			</div>
+			<div class="form-group">
+				<div class="col-sm-5">
+					<label for="InputInfoEvalLectureByStudentEffectiveDate">시행연월</label>
+					<input type="text" class="form-control" id="InfoEvalLectureByStudentEffectiveDate" name="InfoEvalLectureByStudentEffectiveDate" aria-describedby="" placeholder="" value="2019-07" size="5">
+					<small class="form-text text-muted">ex) 2018-01</small>
+				</div>
+			</div>
+			<p style="height: 10px"></p>
+			<div class="form-group">
+				<button type="button" id="btnAdd" class="btn btn-primary">추가</button> <button type="button" id="btnBack" class="btn btn-secondary disabled">뒤로가기</button>
+			</div>
+		</fieldset>
+	</form>
+</div>
 </html>
