[한병권] rootIndex 화면 수정 완료

--- a/lms/src/main/resources/templates/association/infoAnnualFee/addInfoAnnualFee.html
+++ b/lms/src/main/resources/templates/association/infoAnnualFee/addInfoAnnualFee.html
@@ -65,7 +65,7 @@
 			<label>연회비 상세내용 :</label>
 			<input type="text" class="form-control" id="infoAnnualFeeDescription" name="infoAnnualFeeDescription">
 		</div>
-		<button type="button" id="btnAdd" class="btn btn-secondary">연회비 개요 추가</button>
+		<button type="button" id="btnAdd" class="btn btn-secondary btn-rightLarge">연회비 개요 추가</button>
 		<h4></h4>
 	</form>
 </div>
