--- a/lms/src/main/resources/templates/association/infoAnnualFee/addRefundAnnualFee.html
+++ b/lms/src/main/resources/templates/association/infoAnnualFee/addRefundAnnualFee.html
@@ -96,7 +96,7 @@
             <label>서비스 결제일 :</label>
             <input type="text" class="form-control" readonly="readonly" id="paymentAnnualFeeDate" name="paymentAnnualFeeDate" th:value="${payment.paymentAnnualFeeDate}">
         </div>            
-		<button type="button" id="btnAdd" class="btn btn-secondary">환불 요청</button>
+		<button type="button" id="btnAdd" class="btn btn-secondary btn-rightLarge">환불 요청</button>
 		<h4></h4>
 	</form>
 </div>
