--- a/lms/src/main/resources/templates/fragments/config.html
+++ b/lms/src/main/resources/templates/fragments/config.html
@@ -112,6 +112,10 @@
 			.sidenav {padding-top: 15px;}
 			.sidenav a {font-size: 18px;}
 		}
+		.btn-rightLarge {
+		font-size: 12px;
+		float: right;
+	}
 
 	</style>
 	<!-- 컨텐츠페이지의 CSS 영역이 들어감 -->
