--- a/lms/src/main/resources/templates/rootIndex.html
+++ b/lms/src/main/resources/templates/rootIndex.html
@@ -55,17 +55,17 @@
 		</thead>
 		<tbody>
 			<tr>
-				<td><div class="btn-group btn-group-lg"><a href="/associationLogin" class="btn btn-outline-primary">협회 관리 페이지</a></div></td>
+				<td><div class="btn-group btn-group-lg"><a href="/associationLogin" class="btn btn-primary">협회 관리 페이지</a></div></td>
 				<td>협회</td>
 				<td>협회에 소속된 교육원 평가 및 자격증 시험 공고</td>	
 			</tr>
 			<tr>
-				<td><div class="btn-group btn-group-lg"><a href="/institutionLogin" class="btn btn-outline-primary">교육원 관리 페이지</a></div></td>
+				<td><div class="btn-group btn-group-lg"><a href="/institutionLogin" class="btn btn-primary">교육원 관리 페이지</a></div></td>
 				<td>교육원</td>
 				<td>각 교육원 관리 및 강사관리 수강 등록</td>	
 			</tr>
 			<tr>
-				<td><div class="btn-group btn-group-lg"><a href="/teacherLogin" class="btn btn-outline-primary">강의 관리 페이지</a></div></td>
+				<td><div class="btn-group btn-group-lg"><a href="/teacherLogin" class="btn btn-primary">강의 관리 페이지</a></div></td>
 				<td>강사</td>
 				<td>본인이 강의하는 강의 관리 및 수강생들의 성적 관리</td>	
 			</tr>
