--- a/lms/src/main/resources/templates/association/infoEvaluation/addInfoEvalByAssociation.html
+++ b/lms/src/main/resources/templates/association/infoEvaluation/addInfoEvalByAssociation.html
@@ -13,6 +13,9 @@
 		font-size: 12px;
 		float: right;
 	}
+	span {
+		color: #B70000;
+	}
 </style>
 </th:block>
 
@@ -22,6 +25,21 @@
 $(document).ready(function(){
 	$('#btnAdd').on('click',function(){
 		console.log('#btnAdd click test');
+		if ($('#infoEvalByAssociationType').val() == ''){
+			$('#helper').text('*평가항목종류를 입력하세요');
+	    	$('#infoEvalByAssociationType').focus();
+    	return false;
+    	}
+		if ($('#infoEvalByAssociationContents').val() == ''){
+			$('#helper').text('*평가문항을 입력하세요');
+	    	$('#infoEvalByAssociationContents').focus();
+    	return false;
+    	}
+		if ($('#infoEvalByAssociationEffectiveDate').val() == ''){
+			$('#helper').text('*시행연월을 입력하세요');
+	    	$('#infoEvalByAssociationEffectiveDate').focus();
+    	return false;
+    	}
 		$('#infoEvalByAssociationInsert').submit();
 	});
 	$('#btnBack').on('click',function(){
@@ -40,7 +58,6 @@ $(document).ready(function(){
     			<legend>평가항목추가</legend>
     		</div>
     		<div class="form-group">
-    			
     			<div class="col-sm-5">
 					<label for="InputInfoEvalByAssociationSort">평가종류</label>
 					<input type="text" class="form-control" id="infoEvalByAssociationSort" name="infoEvalByAssociationSort" aria-describedby="" readonly="readonly" value="교육원종합평가">
@@ -63,11 +80,17 @@ $(document).ready(function(){
 			<div class="form-group">
 				<div class="col-sm-5">
 					<label for="InputInfoEvalByAssociationEffectiveDate">시행연월</label>
-					<input type="text" class="form-control" id="infoEvalByAssociationEffectiveDate" name="infoEvalByAssociationEffectiveDate" aria-describedby="" placeholder="" value="2018-01" size="5">
+					<input type="text" class="form-control" id="infoEvalByAssociationEffectiveDate" name="infoEvalByAssociationEffectiveDate" aria-describedby="" placeholder="" value="2019-07" size="5">
 					<small class="form-text text-muted">ex) 2018-01</small>
 				</div>
 			</div>
+			<div class="form-group">
+				<div class="col-sm-5">
+					<span id="helper"></span>
+				</div>
+			</div>
 			<p style="height: 10px"></p>
+			
 			<div class="form-group">
 				<button type="button" id="btnAdd" class="btn btn-primary">추가</button> <button type="button" id="btnBack" class="btn btn-secondary disabled">뒤로가기</button>
 			</div>
